--- a/src/app/layout/header/styles.scss
+++ b/src/app/layout/header/styles.scss
@@ -43,8 +43,8 @@
 }
 
 .header__brand img {
-  width: 48px;
-  height: 48px;
+  width: 64px;
+  height: 64px;
 }
 
 .header__brand strong {
@@ -71,7 +71,7 @@
   border: none;
   padding: 0 1.5rem;
   background: #ffb600;
-  color: #001f3f;
+  color: #022c57;
   font-weight: 700;
   cursor: pointer;
 }
