--- a/src/app/layout/footer/index.html
+++ b/src/app/layout/footer/index.html
@@ -17,9 +17,8 @@
     </section>
     <section class="footer__contact">
       <h3>Fale com a gente</h3>
-      <p>Central de relacionamento: 0800 123 456</p>
-      <p>Whatsapp: (18) 99750-8457</p>
-      <p>Segunda a sábado das 8h às 22h</p>
+      <p>Whatsapp: (17) 3641-1010</p>
+      <p>Seg a sáb das 8h às 22h</p>
     </section>
   </div>
   <div class="footer__bottom">
