--- a/src/app/layout/footer/index.html
+++ b/src/app/layout/footer/index.html
@@ -3,7 +3,7 @@
     <section class="footer__brand">
       <strong>Supermercado Proença</strong>
       <p>
-        Inspirado na experiência Carrefour, entregamos praticidade, ofertas exclusivas e serviços
+        Entregamos praticidade, ofertas exclusivas e serviços
         digitais para transformar a rotina de compras dos nossos clientes.
       </p>
     </section>
