--- a/src/app/layout/footer/styles.scss
+++ b/src/app/layout/footer/styles.scss
@@ -1,7 +1,7 @@
 :host {
   display: block;
-  background: #002b7a;
-  color: rgba(255, 255, 255, 0.92);
+  background: #001f3f;
+  color: rgba(255, 255, 255, 0.9);
 }
 
 .footer {
@@ -22,7 +22,7 @@
 }
 
 h3 {
-  color: #ffdfe3;
+  color: #ffb600;
   font-size: 1rem;
 }
 
