--- a/src/app/layout/header/index.html
+++ b/src/app/layout/header/index.html
@@ -11,6 +11,7 @@
         type="search"
         placeholder="Pesquise por produtos ou marcas"
         autocomplete="off"
+        [value]="searchValue"
       />
       <button type="submit" aria-label="Buscar">
         <svg viewBox="0 0 24 24" role="img" aria-hidden="true">
@@ -24,22 +25,20 @@
       <a
         *ngFor="let action of actions"
         [routerLink]="action.path"
+        [fragment]="action.fragment"
         routerLinkActive="active"
         class="header__action"
       >
         <span class="header__action-icon" [ngSwitch]="action.icon" aria-hidden="true">
-          <svg *ngSwitchCase="'login'" viewBox="0 0 24 24" role="img">
-            <path
-              d="M12 12a5 5 0 1 0-5-5 5 5 0 0 0 5 5zm0 2c-3.33 0-10 1.67-10 5v1h20v-1c0-3.33-6.67-5-10-5z"
-            />
-          </svg>
           <svg *ngSwitchCase="'benefits'" viewBox="0 0 24 24" role="img">
             <path
-              d="M20 6h-2.18A3 3 0 0 0 15 4a3 3 0 0 0-3 3 3 3 0 0 0-3-3 3 3 0 0 0-2.82 2H4a2 2 0 0 0-2 2v2a4 4 0 0 0 3 3.87V21a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-7.13A4 4 0 0 0 22 10V8a2 2 0 0 0-2-2z"
+              d="M12 2 3 6v6c0 5.25 3.36 10.06 9 11 5.64-.94 9-5.75 9-11V6zm0 2.18 7 3.11v4.71c0 4.35-2.73 8.29-7 9.12-4.27-.83-7-4.77-7-9.12V7.29zM12 8a4 4 0 1 0 4 4 4 4 0 0 0-4-4zm0 2a2 2 0 1 1-2 2 2 2 0 0 1 2-2z"
             />
           </svg>
-          <svg *ngSwitchCase="'orders'" viewBox="0 0 24 24" role="img">
-            <path d="M19 3H5a2 2 0 0 0-2 2v16l9-4 9 4V5a2 2 0 0 0-2-2z" />
+          <svg *ngSwitchCase="'tracking'" viewBox="0 0 24 24" role="img">
+            <path
+              d="M12 2a7 7 0 0 0-7 7c0 5.25 7 13 7 13s7-7.75 7-13a7 7 0 0 0-7-7zm0 9.5A2.5 2.5 0 1 1 14.5 9 2.5 2.5 0 0 1 12 11.5zm8.5 7.5h-3.12a28.62 28.62 0 0 1-1.69 2H20.5a1 1 0 0 0 0-2zM6.62 19H3.5a1 1 0 0 0 0 2h4.31a28.62 28.62 0 0 1-1.69-2z"
+            />
           </svg>
           <svg *ngSwitchCase="'cart'" viewBox="0 0 24 24" role="img">
             <path
@@ -58,6 +57,7 @@
     <a
       *ngFor="let link of mainLinks"
       [routerLink]="link.path"
+      [fragment]="link.fragment"
       routerLinkActive="active"
       [routerLinkActiveOptions]="{ exact: link.path === '' }"
     >
