PROENCA-02 mudei whats footer

--- a/src/app/layout/footer/index.html
+++ b/src/app/layout/footer/index.html
@@ -17,7 +17,7 @@
     </section>
     <section class="footer__contact">
       <h3>Fale com a gente</h3>
-      <p>Whatsapp: (17) 3641-1010</p>
+      <p>Whatsapp: 17 99616-3040</p>
       <p>Seg a sáb das 8h às 22h</p>
     </section>
   </div>
