--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,9 +4,10 @@
     <router-outlet />
   </main>
   <app-footer />
+  // Botão flutuante do WhatsApp mudar aqui, Wa.me nao funciona
   <a
     class="whatsapp-float"
-    href="https://wa.me/5517996163040"
+    href="https://wa.me/5517996163040"  
     target="_blank"
     rel="noopener"
     aria-label="Fale conosco no WhatsApp"
