--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header" style="scroll-margin-top: 100%;">
   <div class="header__main">
     <a class="header__brand" routerLink="">
       <img src="assets/logo.png" alt="Logo Proença" />
