--- a/src/app/home/components/departments/departments.component.scss
+++ b/src/app/home/components/departments/departments.component.scss
@@ -21,7 +21,7 @@
 }
 
 .promo__intro {
-  max-width: 520px;
+  max-inline-size: 520px;
   display: grid;
   gap: 0.75rem;
 }
@@ -40,7 +40,7 @@
   gap: 0.35rem;
   text-align: center;
   color: #e1001a;
-  min-width: 220px;
+  min-inline-size: 220px;
 }
 
 .promo__timer-label {
@@ -88,15 +88,15 @@ article:hover {
 
 .promo__media img {
   display: block;
-  width: 100%;
-  height: 100%;
+  inline-size: 100%;
+  block-size: 100%;
   object-fit: cover;
 }
 
 .promo__badge {
   position: absolute;
-  top: 0rem;
-  left: 0rem;
+  inset-block-start: 0rem;
+  inset-inline-start: 0rem;
   background: #ff0000;
   color: #fff;
   font-weight: 700;
@@ -141,7 +141,7 @@ article:hover {
 }
 
 .promo__actions {
-  margin-top: 0.5rem;
+  margin-block-start: 0.5rem;
 }
 
 .promo__buy {
@@ -178,7 +178,7 @@ article:hover {
   }
 
   .promo__timer {
-    width: 100%;
+    inline-size: 100%;
     text-align: center;
   }
 }
