--- a/src/app/home/components/highlights/highlights.component.scss
+++ b/src/app/home/components/highlights/highlights.component.scss
@@ -74,7 +74,7 @@ h3 {
 }
 
 .highlights__cta {
-  margin-top: auto;
+  // margin-top: auto;
   display: inline-flex;
   align-items: center;
   justify-content: center;
