--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -30,9 +30,9 @@
         class="header__action"
       >
         <span class="header__action-icon" [ngSwitch]="action.icon" aria-hidden="true">
-          <svg *ngSwitchCase="'benefits'" viewBox="0 0 24 24" role="img">
+          <svg *ngSwitchCase="'account'" viewBox="0 0 24 24" role="img">
             <path
-              d="M12 2 3 6v6c0 5.25 3.36 10.06 9 11 5.64-.94 9-5.75 9-11V6zm0 2.18 7 3.11v4.71c0 4.35-2.73 8.29-7 9.12-4.27-.83-7-4.77-7-9.12V7.29zM12 8a4 4 0 1 0 4 4 4 4 0 0 0-4-4zm0 2a2 2 0 1 1-2 2 2 2 0 0 1 2-2z"
+              d="M12 2a5 5 0 1 1-5 5 5 5 0 0 1 5-5zm0 12c-4.42 0-8 2.35-8 5.25V22h16v-2.75C20 16.35 16.42 14 12 14z"
             />
           </svg>
           <svg *ngSwitchCase="'tracking'" viewBox="0 0 24 24" role="img">
